k8s/4-traefik.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: traefik

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik-deployment
  namespace: traefik
  labels:
    app: traefik

spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-account
      containers:
        - name: traefik
          image: traefik:v3.3
          args:
            - --entrypoints.web.address=:80
            - --entrypoints.websecure.address=:443
            - --providers.kubernetesGateway
          ports:
            - name: http
              containerPort: 80
            - name: https
              containerPort: 443
            - name: dashboard
              containerPort: 8080

# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: traefik-dashboard-service
#   namespace: traefik

# spec:
#   type: LoadBalancer
#   ports:
#     - port: 8080
#       targetPort: dashboard
#   selector:
#     app: traefik


---
apiVersion: v1
kind: Service
metadata:
  name: traefik-service
  namespace: traefik

spec:
  type: LoadBalancer
  ports:
    - port: 80
      name: http
      targetPort: http
    - port: 443
      name: https
      targetPort: https
  selector:
    app: traefik

# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: traefik-service-websecure
#   namespace: traefik

# spec:
#   type: NodePort
#   ports:
#     - port: 443
#       name: https
#       targetPort: https
#       nodePort: 30000
#   selector:
#     app: traefik
